fix: :bug: fixing some frontend issues

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,7 @@
   --color-primary-rgb: 0, 179, 166; /* #00B3A6 en RGB */
   --color-secondary-rgb: 41, 161, 156; /* #29A19C en RGB */
   --color-accent-rgb: 255, 193, 7; /* #FFC107 en RGB */
-  --color-background-rgb: 249, 250, 251; /* #F9FAFB en RGB */
+  --color-background-rgb: 251, 235, 210; /* #FBEBD2 en RGB */
   --color-text-rgb: 51, 51, 51; /* #333333 en RGB */
   --color-success-rgb: 40, 167, 69; /* #28A745 en RGB */
   --color-warning-rgb: 255, 193, 7; /* #FFC107 en RGB */
