--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,11 +3,12 @@
 @tailwind utilities;
 
 :root {
-  --color-primary-rgb: 0, 179, 166; /* #00B3A6 en RGB */
-  --color-secondary-rgb: 41, 161, 156; /* #29A19C en RGB */
-  --color-accent-rgb: 255, 193, 7; /* #FFC107 en RGB */
-  --color-background-rgb: 251, 235, 210; /* #FBEBD2 en RGB */
-  --color-text-rgb: 51, 51, 51; /* #333333 en RGB */
+  --color-primary-rgb: 7, 72, 93; /* #07485D en RGB */
+  --color-secondary-rgb: 2, 125, 138; /* #027d8a en RGB */
+  --color-accent-rgb: 245, 78, 41; /* #F54E29 en RGB */
+  --color-background-rgb: 254, 254, 254; /* #FEFEFE en RGB */
+  --color-text-rgb: 96, 82, 73; /* #605249 en RGB */
+  --color-text-contrast-rgb: 226, 232, 240; /* #E2E8F0 en RGB */
   --color-success-rgb: 40, 167, 69; /* #28A745 en RGB */
   --color-warning-rgb: 255, 193, 7; /* #FFC107 en RGB */
   --color-error-rgb: 220, 53, 69; /* #DC3545 en RGB */
@@ -15,11 +16,12 @@
 
 /* Tema oscuro */
 .dark {
-  --color-primary-rgb: 0, 179, 166; /* #00B3A6 en RGB */
-  --color-secondary-rgb: 41, 161, 156; /* #29A19C en RGB */
-  --color-accent-rgb: 255, 193, 7; /* #FFC107 en RGB */
+  --color-primary-rgb: 7, 72, 93; /* #07485D en RGB */
+  --color-secondary-rgb: 2, 125, 138; /* #027d8a en RGB */
+  --color-accent-rgb: 245, 78, 41; /* #F54E29 en RGB */
   --color-background-rgb: 44, 62, 80; /* #2C3E50 en RGB */
   --color-text-rgb: 226, 232, 240; /* #E2E8F0 en RGB */
+  --color-text-contrast-rgb: 226, 232, 240; /* #E2E8F0 en RGB */
   --color-success-rgb: 40, 167, 69; /* #28A745 en RGB */
   --color-warning-rgb: 255, 193, 7; /* #FFC107 en RGB */
   --color-error-rgb: 220, 53, 69; /* #DC3545 en RGB */
@@ -29,4 +31,5 @@ body {
   background-color: rgb(var(--color-background-rgb));
   color: rgb(var(--color-text-rgb));
   font-family: "Lato", sans-serif;
+  /* font-size: 16px; */
 }
